BIG UPDATE!!! Change-list: 1. Absolutely new design! 2. Added custom buttons 3. Changed color theme. 4. Added animations. 5. Parser is finally done!
Planned:
New icons
Login page
Redesigned list items
Updated info page
Updated settings page.

YESSIR

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,8 +12,18 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyProjectRebuild"
+        android:theme="@style/MyTheme"
         tools:targetApi="31">
+
+        <activity
+            android:name=".SurveyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ThankYouActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
